crates/toml/tests/snapshots/invalid/table/newline-04.stderr
TOML parse error at line 2, column 1
  |
2 | ]
  | ^
missing table open, expected `[`

---
TOML parse error at line 1, column 6
  |
1 | [tbl.
  |      ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
